# engram_generator

./: .gitignore  AUDIT_REPORT.md  CHANGES.md  CLAUDE.md  CNAME  COVERAGE_GAP.md  GENERATOR_INDEX.md  LICENSE  README.md  SKILL_TREE.md  SKILL_TREE.txt  TODO.md  TODO_VERIFICATION.md  VERIFICATION.md  graph.html  index.html  pyproject.toml  tasks.json  tree.html
docs/: graph.html  index.html  logo.html  samples.html  tree.html
engram_generator/: __init__.py  __main__.py  base.py  base_domains.py  cli.py  latex_render.py  logo.py  parallel.py  tokenizer.py
engram_generator/atoms/: __init__.py  actuarial_medical_meta_atoms.py  ai_ml.py  algebra_atoms.py  algorithms_chemistry_atoms.py  algpat_alggeom_particle_atoms.py  analysis_probability_atoms.py  antenna_polymer_atoms.py  applied_domains.py  astro_materials_relativity_ext_atoms.py  automata.py  automata_diffeq_trig_atoms.py  batch3_applied_science.py  batch3_cs_math.py  batch_ext_atoms.py  (+91 more)
results/: README.md  schema.json
scripts/: audit.py  demo.py  export_tasks_json.py  generate_index.py  source_atoms.py  validate_all.py  verify_examples.py  verify_libraries.py
tests/: test_all_generators_sanity.py  test_atoms.py  test_audit_fixes.py  test_base.py  test_cli.py  test_correctness_cs.py  test_correctness_math.py  test_correctness_science.py  test_coverage_gaps.py  test_e2e.py  test_edge_cases.py  test_enrich_problem.py  test_evaluation.py  test_full_coverage.py  test_latex_render.py  test_oos.py  test_parallel.py  test_python_verifier.py  test_skill_tree_full.py  test_smoke.py  test_structural.py  test_validation.py
(+307 files in other folders)
